swiftyPOPL/test/should_fail/string_concat_unsupported.swift
let s: String = "a" + "b"
